--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -141,4 +141,13 @@ $valo-menu-background-color: #414B56;
     background-image: linear-gradient(to bottom, #1b87e3 2%, #166ed5 98%);
     color: #eceded;
   }
+
+  .v-ratingstars-wrapper-large .v-ratingstars-bar {
+    background-image: url(img/star_bg_34x33.gif);
+  }
+  .v-ratingstars-wrapper-large .v-ratingstars-star {
+    background-image: url(img/star_34x33.gif);
+    width: 34px;
+    height: 33px;
+  }
 }
