--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -660,11 +660,53 @@
 
 /**
  *
- *
- * @param {string} $primaryStyleName (v-escalator) - 
- *
- * @group escalator
+ * @group table
  */
+
+@-webkit-keyframes valo-grid-editor-footer-animate-in {
+		0% {
+		margin-top: -37px;
+	}
+	}
+
+@-moz-keyframes valo-grid-editor-footer-animate-in {
+		0% {
+		margin-top: -37px;
+	}
+	}
+
+@keyframes valo-grid-editor-footer-animate-in {
+		0% {
+		margin-top: -37px;
+	}
+	}
+
+@-webkit-keyframes valo-grid-editor-footer-animate-in-alt {
+		0% {
+		margin-bottom: -38px;
+	}
+		100% {
+		margin-bottom: -1px;
+	}
+	}
+
+@-moz-keyframes valo-grid-editor-footer-animate-in-alt {
+		0% {
+		margin-bottom: -38px;
+	}
+		100% {
+		margin-bottom: -1px;
+	}
+	}
+
+@keyframes valo-grid-editor-footer-animate-in-alt {
+		0% {
+		margin-bottom: -38px;
+	}
+		100% {
+		margin-bottom: -1px;
+	}
+	}
 
 /**
  *
@@ -903,7 +945,7 @@
  */
 
 .v-vaadin-version:after {
-	content: "7.3.7";
+	content: "7.4.0";
 }
 
 .v-widget {
@@ -1061,6 +1103,10 @@ div.v-layout.v-horizontal.v-widget {
 
 .v-horizontal > .v-slot, .v-horizontal > .v-expand > .v-slot {
 	height: 100%;
+}
+
+.v-horizontal > .v-expand > .v-slot {
+	position: relative;
 }
 
 .v-vertical > .v-spacing, .v-vertical > .v-expand > .v-spacing {
@@ -2338,6 +2384,8 @@ div.v-layout.v-horizontal.v-widget {
 
 .mytheme .v-button-icon-align-top .v-icon {
 	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .mytheme .v-button-icon-align-top .v-icon  + span:not(:empty) {
@@ -2803,11 +2851,10 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-touch-callout: none;
 	cursor: pointer;
 	position: absolute;
+	width: 37px;
 	top: 1px;
 	right: 1px;
 	bottom: 1px;
-	width: 37px;
-	cursor: pointer;
 	border-left: 1px solid #e4e4e4;
 	color: #a3a3a3;
 	border-radius: 0 3px 3px 0;
@@ -3234,12 +3281,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-touch-callout: none;
 	cursor: pointer;
 	position: absolute;
-	top: 1px;
-	right: 1px;
-	bottom: 1px;
 	width: 28px;
-	cursor: pointer;
-	border-radius: 0 3px 3px 0;
+	border-radius: 0 4px 4px 0;
 }
 
 .mytheme .v-filterselect-tiny [class$="button"]:before {
@@ -3365,12 +3408,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-touch-callout: none;
 	cursor: pointer;
 	position: absolute;
-	top: 1px;
-	right: 1px;
-	bottom: 1px;
 	width: 31px;
-	cursor: pointer;
-	border-radius: 0 3px 3px 0;
+	border-radius: 0 4px 4px 0;
 }
 
 .mytheme .v-filterselect-compact [class$="button"]:before, .mytheme .v-filterselect-small [class$="button"]:before {
@@ -3501,12 +3540,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-touch-callout: none;
 	cursor: pointer;
 	position: absolute;
-	top: 1px;
-	right: 1px;
-	bottom: 1px;
 	width: 44px;
-	cursor: pointer;
-	border-radius: 0 3px 3px 0;
+	border-radius: 0 4px 4px 0;
 }
 
 .mytheme .v-filterselect-large [class$="button"]:before {
@@ -3633,12 +3668,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-touch-callout: none;
 	cursor: pointer;
 	position: absolute;
-	top: 1px;
-	right: 1px;
-	bottom: 1px;
 	width: 59px;
-	cursor: pointer;
-	border-radius: 0 3px 3px 0;
+	border-radius: 0 4px 4px 0;
 }
 
 .mytheme .v-filterselect-huge [class$="button"]:before {
@@ -4832,20 +4863,19 @@ div.v-layout.v-horizontal.v-widget {
 	cursor: pointer;
 	-webkit-appearance: none;
 	background: transparent;
-	border: none;
 	padding: 0;
 	position: absolute;
 	z-index: 10;
-	top: 1px;
-	bottom: 1px;
-	left: 1px;
 	width: 37px;
 	line-height: 35px;
 	text-align: center;
-	cursor: pointer;
 	font: inherit;
 	outline: none;
 	margin: 0;
+	top: 1px;
+	bottom: 1px;
+	left: 1px;
+	border: none;
 	border-right: 1px solid #e4e4e4;
 	color: #a3a3a3;
 	border-radius: 3px 0 0 3px;
@@ -5451,13 +5481,9 @@ div.v-layout.v-horizontal.v-widget {
 	padding: 0;
 	position: absolute;
 	z-index: 10;
-	top: 0;
-	bottom: 0;
-	left: 0;
 	width: 28px;
 	line-height: 28px;
 	text-align: center;
-	cursor: pointer;
 	font: inherit;
 	outline: none;
 	margin: 0;
@@ -5570,13 +5596,9 @@ div.v-layout.v-horizontal.v-widget {
 	padding: 0;
 	position: absolute;
 	z-index: 10;
-	top: 0;
-	bottom: 0;
-	left: 0;
 	width: 31px;
 	line-height: 31px;
 	text-align: center;
-	cursor: pointer;
 	font: inherit;
 	outline: none;
 	margin: 0;
@@ -5694,13 +5716,9 @@ div.v-layout.v-horizontal.v-widget {
 	padding: 0;
 	position: absolute;
 	z-index: 10;
-	top: 0;
-	bottom: 0;
-	left: 0;
 	width: 44px;
 	line-height: 44px;
 	text-align: center;
-	cursor: pointer;
 	font: inherit;
 	outline: none;
 	margin: 0;
@@ -5814,13 +5832,9 @@ div.v-layout.v-horizontal.v-widget {
 	padding: 0;
 	position: absolute;
 	z-index: 10;
-	top: 0;
-	bottom: 0;
-	left: 0;
 	width: 59px;
 	line-height: 59px;
 	text-align: center;
-	cursor: pointer;
 	font: inherit;
 	outline: none;
 	margin: 0;
@@ -7324,6 +7338,7 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .mytheme .v-window-outerheader {
+	cursor: move;
 	position: absolute;
 	z-index: 2;
 	top: 0;
@@ -7348,7 +7363,6 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .mytheme .v-window-header {
-	cursor: move;
 	line-height: 36px;
 	padding-left: 12px;
 	margin-right: 74px;
@@ -7356,6 +7370,14 @@ div.v-layout.v-horizontal.v-widget {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	color: #7e7e7e;
+}
+
+.mytheme .v-window-restorebox-disabled  ~ .v-window-closebox ~ .v-window-header, .mytheme .v-window-maximizebox-disabled  ~ .v-window-closebox ~ .v-window-header {
+	margin-right: 37px;
+}
+
+.mytheme .v-window-restorebox-disabled  ~ .v-window-closebox-disabled ~ .v-window-header, .mytheme .v-window-maximizebox-disabled  ~ .v-window-closebox-disabled ~ .v-window-header {
+	margin-right: 12px;
 }
 
 .mytheme .v-window-closebox, .mytheme .v-window-maximizebox, .mytheme .v-window-restorebox {
@@ -7412,11 +7434,11 @@ div.v-layout.v-horizontal.v-widget {
 	border-bottom-left-radius: 0;
 }
 
-.mytheme .v-window-restorebox-disabled, .mytheme .v-window-maximizebox-disabled {
+.mytheme .v-window-closebox-disabled, .mytheme .v-window-resizebox-disabled, .mytheme .v-window-restorebox-disabled, .mytheme .v-window-maximizebox-disabled {
 	display: none;
 }
 
-.mytheme .v-window-restorebox-disabled  + .v-window-closebox, .mytheme .v-window-maximizebox-disabled  + .v-window-closebox {
+.mytheme .v-window-closebox-disabled  + .v-window-closebox, .mytheme .v-window-resizebox-disabled  + .v-window-closebox, .mytheme .v-window-restorebox-disabled  + .v-window-closebox, .mytheme .v-window-maximizebox-disabled  + .v-window-closebox {
 	width: 37px;
 	padding-right: 0;
 	border-bottom-left-radius: 4px;
@@ -7530,10 +7552,6 @@ div.v-layout.v-horizontal.v-widget {
 
 .v-ie8 .mytheme .v-window-resizebox, .v-ie9 .mytheme .v-window-resizebox {
 	cursor: se-resize;
-}
-
-.mytheme .v-window-resizebox-disabled {
-	display: none;
 }
 
 .mytheme .v-window-modalitycurtain:active  ~ .v-window {
@@ -9607,7 +9625,7 @@ div.v-layout.v-horizontal.v-widget {
 .mytheme .v-upload-immediate input[type="file"] {
 	opacity: 0;
 	filter: alpha(opacity=0) ;
-	z-index: 2;
+	z-index: -1;
 	position: absolute;
 	right: 0;
 	height: 37px;
@@ -10373,32 +10391,32 @@ div.v-layout.v-horizontal.v-widget {
 	outline: none;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part {
 	background-color: #414B56;
 	min-width: 74px;
 	max-width: 111px;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-title {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-title {
 	font-size: 12px;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-title .v-label-undef-w {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-title .v-label-undef-w {
 	white-space: normal;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .v-menubar-user-menu {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .v-menubar-user-menu {
 	margin-left: 0;
 	margin-right: 0;
 	font-size: 11px;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .v-menubar-user-menu img.v-icon {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .v-menubar-user-menu img.v-icon {
 	width: 28px;
 	height: 28px;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part [class*="subtitle"] {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part [class*="subtitle"] {
 	margin: 9px 0 0;
 	padding: 7px 25px 7px 9px;
 	line-height: 1;
@@ -10410,15 +10428,15 @@ div.v-layout.v-horizontal.v-widget {
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part [class*="subtitle"] [class*="badge"] {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part [class*="subtitle"] [class*="badge"] {
 	right: 9px;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part [class*="subtitle"]  + .valo-menu-item {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part [class*="subtitle"]  + .valo-menu-item {
 	border-top: none;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item {
 	display: block;
 	font-size: 26px;
 	line-height: 1;
@@ -10427,11 +10445,11 @@ div.v-layout.v-horizontal.v-widget {
 	border-top: 1px solid #4c5560;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item:first-child {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item:first-child {
 	border-top: none;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item [class*="caption"] {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item [class*="caption"] {
 	display: block;
 	width: auto;
 	margin: 0.3em 0 0;
@@ -10440,27 +10458,27 @@ div.v-layout.v-horizontal.v-widget {
 	line-height: 1.3;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item .v-icon {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item .v-icon {
 	margin: 0;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item span.v-icon {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item span.v-icon {
 	opacity: 0.8;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item.selected {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item.selected {
 	background: #3a434d;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item.selected .v-icon {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item.selected .v-icon {
 	opacity: 1;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item.selected [class*="badge"] {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item.selected [class*="badge"] {
 	border-color: #3a434d;
 }
 
-.mytheme .v-ui[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item [class*="badge"] {
+.mytheme .v-ui.valo-menu-responsive[width-range~="801px-1100px"] .valo-menu-part .valo-menu-item [class*="badge"] {
 	padding-left: 4px;
 	padding-right: 4px;
 	top: 7px;
@@ -10468,33 +10486,33 @@ div.v-layout.v-horizontal.v-widget {
 	border: 2px solid #414B56;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] {
 	padding-top: 37px;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .v-loading-indicator {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .v-loading-indicator {
 	top: 37px;
 }
 
-.mytheme .v-ui[width-range~="0-800px"]  > .v-widget {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"]  > .v-widget {
 	position: relative !important;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu {
 	border-right: none;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu-part {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu-part {
 	overflow: visible;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu-toggle {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu-toggle {
 	display: inline-block;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu-title {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu-title {
 	position: fixed;
 	z-index: 100;
 	top: 0;
@@ -10506,7 +10524,7 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-backface-visibility: hidden;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu .v-menubar-user-menu {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu .v-menubar-user-menu {
 	position: fixed;
 	z-index: 100;
 	top: 0;
@@ -10519,12 +10537,12 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-backface-visibility: hidden;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu .v-menubar-user-menu .v-menubar-menuitem {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu .v-menubar-user-menu .v-menubar-menuitem {
 	line-height: 36px;
 	white-space: nowrap;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu .v-menubar-user-menu img.v-icon {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu .v-menubar-user-menu img.v-icon {
 	display: inline-block;
 	margin: 0 6px 0 0;
 	width: 19px;
@@ -10533,7 +10551,7 @@ div.v-layout.v-horizontal.v-widget {
 	border: none;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menuitems {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menuitems {
 	height: 100%;
 	background-color: #414B56;
 	background-image: -webkit-linear-gradient(right, #38414a 0%, #414B56 9px);
@@ -10561,7 +10579,7 @@ div.v-layout.v-horizontal.v-widget {
 	transition: all 300ms;
 }
 
-.mytheme .v-ui[width-range~="0-800px"] .valo-menu-visible .valo-menuitems {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-800px"] .valo-menu-visible .valo-menuitems {
 	-webkit-transform: translatex(0%);
 	-moz-transform: translatex(0%);
 	-ms-transform: translatex(0%);
@@ -10569,11 +10587,11 @@ div.v-layout.v-horizontal.v-widget {
 	transform: translatex(0%);
 }
 
-.mytheme .v-ui[width-range~="0-500px"] .valo-menu-toggle .v-button-caption {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-500px"] .valo-menu-toggle .v-button-caption {
 	display: none;
 }
 
-.mytheme .v-ui[width-range~="0-500px"] .valo-menu .v-menubar-user-menu .v-menubar-menuitem-caption {
+.mytheme .v-ui.valo-menu-responsive[width-range~="0-500px"] .valo-menu .v-menubar-user-menu .v-menubar-menuitem-caption {
 	display: inline-block;
 	width: 19px;
 	overflow: hidden;
@@ -11582,8 +11600,16 @@ div.v-layout.v-horizontal.v-widget {
 	background: transparent;
 }
 
+.mytheme .content-view {
+	max-width: 800px;
+}
+
 .mytheme .v-filterselect-suggestpopup-hierarchical .gwt-MenuItem {
 	white-space: pre;
+}
+
+.mytheme .v-form-errormessage {
+	color: red;
 }
 
 .mytheme .v-menubar-color1 {
@@ -11627,19 +11653,19 @@ div.v-layout.v-horizontal.v-widget {
 	line-height: 36px;
 	border-bottom: none;
 	margin-bottom: 1px;
-	background-color: #5c5f66;
-	background-image: -webkit-linear-gradient(top, #5d6068 2%, #595c62 98%);
-	background-image: linear-gradient(to bottom,#5d6068 2%, #595c62 98%);
-	color: #d1d2d4;
+	background-color: #414B56;
+	background-image: -webkit-linear-gradient(top, #424c57 2%, #3e4853 98%);
+	background-image: linear-gradient(to bottom,#424c57 2%, #3e4853 98%);
+	color: #c8cdd1;
 	font-weight: 400;
 	font-size: 14px;
-	-webkit-box-shadow: inset 0 1px 0 #767676, inset 0 -1px 0 #56595f, 0 0 0 1px #4e5157;
-	box-shadow: inset 0 1px 0 #767676, inset 0 -1px 0 #56595f, 0 0 0 1px #4e5157;
+	-webkit-box-shadow: inset 0 1px 0 #606066, inset 0 -1px 0 #3c4550, 0 0 0 1px #373f49;
+	box-shadow: inset 0 1px 0 #606066, inset 0 -1px 0 #3c4550, 0 0 0 1px #373f49;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 }
 
 .v-ie8 .mytheme .v-panel-caption-color1 {
-	outline: 1px solid #4e5157;
+	outline: 1px solid #373f49;
 }
 
 .mytheme .v-panel-caption-color2 {
@@ -11696,19 +11722,19 @@ div.v-layout.v-horizontal.v-widget {
 	line-height: 36px;
 	border-bottom: none;
 	margin-bottom: 1px;
-	background-color: #5c5f66;
-	background-image: -webkit-linear-gradient(top, #5d6068 2%, #595c62 98%);
-	background-image: linear-gradient(to bottom,#5d6068 2%, #595c62 98%);
-	color: #d1d2d4;
+	background-color: #414B56;
+	background-image: -webkit-linear-gradient(top, #424c57 2%, #3e4853 98%);
+	background-image: linear-gradient(to bottom,#424c57 2%, #3e4853 98%);
+	color: #c8cdd1;
 	font-weight: 400;
 	font-size: 14px;
-	-webkit-box-shadow: inset 0 1px 0 #767676, inset 0 -1px 0 #56595f, 0 0 0 1px #4e5157;
-	box-shadow: inset 0 1px 0 #767676, inset 0 -1px 0 #56595f, 0 0 0 1px #4e5157;
+	-webkit-box-shadow: inset 0 1px 0 #606066, inset 0 -1px 0 #3c4550, 0 0 0 1px #373f49;
+	box-shadow: inset 0 1px 0 #606066, inset 0 -1px 0 #3c4550, 0 0 0 1px #373f49;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 }
 
 .v-ie8 .mytheme .v-button-color1 {
-	outline: 1px solid #4e5157;
+	outline: 1px solid #373f49;
 }
 
 .mytheme .v-button-color2 {
@@ -11858,6 +11884,15 @@ div.v-layout.v-horizontal.v-widget {
 	color: #eceded;
 }
 
+.mytheme .v-ratingstars-wrapper {
+	border: none !important;
+	background: transparent !important;
+}
+
+.mytheme .v-ratingstars-wrapper-tiny {
+	width: 70px;
+}
+
 .mytheme .v-ratingstars-wrapper-large .v-ratingstars-bar {
 	background-image: url(img/star_bg_34x33.gif);
 }
@@ -11866,4 +11901,8 @@ div.v-layout.v-horizontal.v-widget {
 	background-image: url(img/star_34x33.gif);
 	width: 34px;
 	height: 33px;
+}
+
+.mytheme .v-formlayout.light > table > tbody > tr > td {
+	border-bottom: none;
 }
