--- a/src/main/webapp/VAADIN/themes/mytheme/common.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/common.scss
@@ -19,6 +19,10 @@
     overflow: hidden;
   }
 
+  .v-formlayout.v-has-width > table, .mytheme .v-formlayout.v-has-width .v-formlayout-contentcell {
+    width: auto  !important;
+  }
+
   .v-ui[width-range~="0-800px"] {
     .valo-menu-title {
       @include valo-gradient($color: $valo-menu-background-color);
