--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -177,8 +177,8 @@ $valo-menu-background-color: #414B56;
     border-bottom: none;
   }
 
-  .tiny .v-button,
-  .tiny .v-button .v-button-wrap {
+  .upload .v-button,
+  .upload .v-button .v-button-wrap {
     height: 28px;
     padding: 0 13px;
     font-size: 12px;
